oop_mro/tests/trybuild/fail_missing_abstract_virtual.stderr
error: unimplemented method `area` must be declared as `abstract virtual fn`
 --> tests/trybuild/fail_missing_abstract_virtual.rs:5:20
  |
5 |         virtual fn area(&self) -> usize;
  |                    ^^^^
