oop_mro/tests/trybuild/fail_missing_abstract_virtual.rs
use oop_mro::prelude::*;

oop_class! {
    abstract class Shape {
        virtual fn area(&self) -> usize;
    }
}

fn main() {}
